--- a/Database/appsettings.json
+++ b/Database/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //Парсинг для определенной версии API
+  "ApiUrl": "https://randomuser.me/api/1.4/"
 }
