--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -8,12 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Http\Exception\**" />
+    <EmbeddedResource Remove="Http\Exception\**" />
+    <None Remove="Http\Exception\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.31" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+    
   </ItemGroup>
 
   <ItemGroup>
